    advanced scheduling is disabled by default. Invoke the init script with
    the schedule option to enable it. Thanks to Omen Wild
    <dbug4.flibble@mandarb.com> for the patch. (closes: #423259)
  * debian/control: Added schedtool, which if installed can be used for
    advanced scheduling in boinc-client's init script, to boinc-client's
    Suggest field.

  [ Debconf translations ]
  * Added Spanish (es.po) by Javier Fernández-Sanguino Peña
    <jfs@computer.org>. (closes: #437379)
  * Added Slovak (sk.po) by helix84 <helix84@centrum.sk>. (closes: #437670)

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sat, 18 Aug 2007 14:38:24 +0200

boinc (5.10.8-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - Fixed wrong CPU information on alpha, hppa, ia64, ppc and sparc.
      (closes: #406853)
    - Use i686-pc-linux-gnu as alternative platform name for
      x86_64-pc-linux-gnu to get i386 binaries on amd64. (closes: #366741)
      Hence all traces to our own mechanism to override the platform name on
      amd64 have been removed:
      - debian/patches/001_amd64_disable_platform_reset.patch
      - debian/extra/use-32bit-on-amd64.sh
      - the associated paragraph from debian/boinc-client.README.Debian
  * Updated boinc_client's, boinc_cmd's and boincmgr's manual pages for the
    new release.
  * debian/boinc-client.{init,default}: Use two dashes for boinc_client's
    command line options instead of one because that is it's default now.
  * debian/boinc-client.postinst: Use "[ ... ] && [ ... ]" instead of
    "[ ... -a ... ]" because these constructs are much easier to read.
  * debian/boinc-client.preinst: Use dpkg-query instead of poking directly
    into the dpkg status file. See this thread for more information:
    http://lists.debian.org/debian-devel/2007/05/msg01070.html
  * debian/conffiles/{cc_config.xml,global_prefs_override.xml}: Added comments
    which explain the purpose of each configuration file and which contain